Bug 259138 - AX: AXCoreObject::enumerateDescendants is missing a null check on object children
Summary: AX: AXCoreObject::enumerateDescendants is missing a null check on object chil...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Accessibility (show other bugs)
Version: Other
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Tyler Wilcock
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-07-11 23:08 PDT by Tyler Wilcock
Modified: 2023-07-12 05:07 PDT (History)
11 users (show)

See Also:


Attachments
Patch (1.67 KB, patch)
2023-07-11 23:14 PDT, Tyler Wilcock
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Tyler Wilcock 2023-07-11 23:08:34 PDT
...
Comment 1 Radar WebKit Bug Importer 2023-07-11 23:08:45 PDT
<rdar://problem/112121991>
Comment 2 Tyler Wilcock 2023-07-11 23:09:49 PDT
rdar://100626906
Comment 3 Tyler Wilcock 2023-07-11 23:14:18 PDT
Created attachment 467025 [details]
Patch
Comment 4 EWS 2023-07-12 05:07:26 PDT
Committed 265992@main (a17521aaa413): <https://commits.webkit.org/265992@main>

All reviewed patches have been landed. Closing bug and clearing flags on attachment 467025 [details].