Cherry-pick a17521aaa413. rdar://problem/100626906

AX: AXCoreObject::enumerateDescendants is missing a null check on object children
    https://bugs.webkit.org/show_bug.cgi?id=259138
    rdar://100626906

    Reviewed by Chris Fleizach.

    Prevent nullptr crashes by checking that each child from
    AXCoreObject::children() is not null in AXCoreObject::enumerateDescendants.

    In a future patch, we should make `AccessibilityChildrenVector` be a Vector of `Ref`s
    rather than a Vector of `RefPtr`s as it is today. RefPtr does not make sense for this
    type -- either we have a child or we don't.

    * Source/WebCore/accessibility/AccessibilityObjectInterface.h:
    (WebCore::Accessibility::enumerateDescendants):

    Canonical link: https://commits.webkit.org/265992@main

Identifier: 265870.54@safari-7616-branch