Source/WebCore/accessibility/AccessibilityObjectInterface.h
@@ -1935,8 +1935,10 @@ void enumerateDescendants(T& object, bool includeSelf, const F& lambda)
     if (includeSelf)
         lambda(object);
 
-    for (const auto& child : object.children())
-        enumerateDescendants(*child, true, lambda);
+    for (const auto& child : object.children()) {
+        if (child)
+            enumerateDescendants(*child, true, lambda);
+    }
 }
 
 template<typename U> inline void performFunctionOnMainThreadAndWait(U&& lambda)
